CR-2008-09-18-0: Enhancem.:  o new module test for issue 2728 integrated into
                               module_tests/generic check
                             o The module_tests/generic check now only reports
                               one result for all started module tests
                 Review:     RD

CR-2008-09-16-0: Enhancem.:  system_tests/execd/reconnect now also checks
                             if a restarted execd will connect to qmaster when
                             act_master file contains wrong host and qmaster is not
                             running.
                 Review:     DG

DG-2008-09-15-0: Enhancem.:  Initial test for qresub client added. Test 
                             for issue 2726. 
                 Review:     JG

JF-2008-09-10-0: Fix.:       Fix for Arco test of testsuite issue 113.
                 Review:     AP

JF-2008-09-09-0: Enhancem.:  New test for Arco testsuite issue 113.
                 Review:     AP

DG-2008-09-09-0: Enhancem.:  New test for Grid Engine IZ 2717.
                 Review:     CR

JG-2008-09-09-0: Enhancem.:  New test for Grid Engine IZ 2706.
                 Review:     MD

MP-2008-09-08-0: Bugfix:     Fix of testsuite issue 158. display_test does
                             not use the DISPLAY value set in the user's
                             envlist.
                 Issue:      158
                 Review:     AP

JF-2008-09-03-0: Enhancem.:  o new test:
                               src/checktree/bugs/issuezilla/1081
                             o new test:
                               src/checktree/bugs/issuezilla/1156
                 Review:     AP

DG-2008-09-01-1: Bugfix:     Fix of testsuite issue 202. Before installing 
                             with menu item (19) the runlevel is set to 0 
                             and afterwards back again. Hence it is possible 
                             to install when other runlevels are in selection. 